--- a/gsb-frais/public/styles/vueFichesComptable.css
+++ b/gsb-frais/public/styles/vueFichesComptable.css
@@ -94,7 +94,7 @@
     margin: 20px;
 }
 
-.fiches_list button
+.button_fiche
 {
     text-align: center;
     width: 250px;
@@ -104,19 +104,207 @@
     border-radius: 5px;
     outline: 0;
     border: 0px;
-    margin: 10px auto 10px auto;
+    margin: 20px auto 20px auto;
     cursor: pointer;
     border-radius: 5px;
     
-    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5); 
-    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
+    background-color: rgb(240, 245, 255);
+
+    -webkit-box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.5); 
+    box-shadow: 0px 0px 7px 2px rgba(0,0,0,0.5);
+    
+    transition-duration: 0.3s;
 }
 
+.button_fiche:hover
+{
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5); 
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.5);
+    background-color: rgb(230, 235, 245);
+}
 
 
 .form_search
 {
     position: relative;
-    width: 100%;
+    width: fit-content;
     height: fit-content;
+    padding: 15px;
+}
+
+.input_zone
+{
+    width: 100%;
+    margin: 0 auto 10px;
+    display: flex;
+    gap: 10px;
+}
+
+.label_input{
+    width: 25%;
+}
+
+.text_input{
+    width: 55%;
+}
+
+
+
+.fiche_position
+{
+    position: relative;
+    padding-top: 50px;
+    width: 650px;
+    display: flex;
+    margin: 0 auto;
+}
+
+.fiche_frais
+{
+    position: relative;
+    height: 80vh;
+    width: 100%;
+    overflow: scroll;
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54); 
+    box-shadow: 0px 0px 10px 5px rgba(94,94,94,0.54);
+    overflow: hidden;
+}
+
+.fiche_frais h1
+{
+    text-align: center;
+    margin: 20px;
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 25px;
+}
+
+.fiche_frais h2
+{
+    text-align: center;
+    margin: 20px;
+    font-family: 'Hind Siliguri';
+    font-size: 12px;
+    font-style: italic;
+}
+
+
+
+
+table {
+    border-collapse: collapse;
+    font-family: 'Hind Siliguri', sans-serif;
+}
+
+.table_fiche
+{
+    width: 85%;
+    position: relative;
+    margin: 0 auto;
+
+}
+
+.table_fiche tr
+{
+    height: 35px;
+}
+
+.table_fiche th
+{
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.4;
+    text-transform: uppercase;
+    background-color: #6C79E0;
+}
+
+.th_libelle
+{
+    width: 80%;
+}
+.th_quantite
+{
+    width: max-content;
+}
+
+.th_hf_libelle
+{
+    width: 55%;
+}
+.th_hf_date
+{
+    width: 25%;
+}
+
+.th_hf_prix
+{
+    width: max-content;
+}
+
+.td_libelle
+{
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 15px;
+    line-height: 25px;
+}
+/*
+.td_libelle
+{
+    font-family: 'Hind Siliguri', sans-serif;
+    font-size: 17px;
+    line-height: 25px;
+    width: 90%;
+}
+
+.td_input
+{
+    font-size: 17px;
+    width: 50px;
+    display: inline-block;
+    white-space: nowrap;
+    text-align: center;
+    line-height: 25px;
+}
+*/
+
+
+
+.input_libelle{
+	font-family: "Roboto", sans-serif;
+	background-color: rgb(255, 255, 255);
+    width: 90%;
+    font-size: 15px;
+    border: 1px solid black;
+}
+
+.td_date {
+    text-align: center;
+    }
+
+input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
+input[type=date]::-webkit-calendar-picker-indicator {
+    -webkit-appearance: none;
+    display: none;
+}
+
+.input_prix{
+    text-align: center;
+	background-color: rgb(225, 225, 225);
+	border: 0px;
+	box-sizing: border-box;
+	font-size: 15px;
+    display:inline-block;
+    width: 100%;
+    height: 35px;
+}
+
+.input_prix::-webkit-outer-spin-button,
+.input_prix::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
 }
