date verif front

--- a/gsb-frais/templates/visiteur/vueFiche.html.twig
+++ b/gsb-frais/templates/visiteur/vueFiche.html.twig
@@ -84,7 +84,7 @@
                                 {% if ligneFraisHorsForfait is empty %}
 
                                     <tr>
-                                        <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text"></td>
+                                        <td class="td_libelle"><input name="frais_hors_forfait[0][libelle]" id="td_libelle_0" class="input_libelle" type="text" required></td>
                                         <td class="td_date"><input name="frais_hors_forfait[0][date]" id="td_date_0" min="{{year}}-{{month}}-01" max="{{year}}-{{month}}-31" class="input_date" type="date"></td>
                                         <td class="td_input"><input name="frais_hors_forfait[0][input]" id="td_input_0" class="input_prix" type="number" value="0" min="0"></td>
                                         <td class ="td_trash"><i class="fa-solid fa-trash" onclick="openModal(this)"></i><td>
