--- a/gsb-frais/public/styles/vueModalSuppression.css
+++ b/gsb-frais/public/styles/vueModalSuppression.css
@@ -1,3 +1,5 @@
+
+
 .page-modal{
     z-index: 2;
     position: fixed;
@@ -9,36 +11,52 @@
 
 .modal{
     width: 350px;
-    height: 200px;
+    height: 110px;
     position: fixed;
-    top: 50%;
+    top: 39%;
     right: 50%;
     transform: translate(50%, -50%);
+    background: #6C79E0;
+    border-radius: 10px 10px 10px 10px;
 }
+
 .modal-header{
     font-size: 20px;
     font-family: 'Hind Siliguri', serif;
     color: hsl(0 0% 98%);
     padding-top: 15px;
-    border-radius: 10px 10px 0px 0px;
-    border-color: #062c33;
-    background: #6C79E0;
     text-align: center;
 }
-.modal-footer{
-    padding-top: 20px;
-    border-radius: 0px 0px 10px 10px;
-    background: #6C79E0;
-    text-align: center;
-    padding-bottom: 20px;
-}
-.btnModal {
-    border-color: #1b1e21;
-    border-radius: 5px;
-    width: 50px;
-    height: 25px;
 
+.modal-footer{
+    padding: 20px 80px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
+
+
+.btnModal {
+	background-color:#7fcde0;
+	border-radius:10px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:5px 25px;
+	text-decoration:none;
+	text-shadow:0px 0px 0px #283966;
+    border: none;
+}
+.btnModal:hover {
+	background-color:#78bede;
+}
+.btnModal:active {
+	position:relative;
+	top:1px;
+}
+
 .td_trash{
     background: rgb(225, 225, 225);
 }
